# device-api

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
bindings/c/: Cargo.toml
bindings/c/include/: device.h
bindings/c/src/: arch.rs  device.rs  hwmon.rs  lib.rs
bindings/python/: Cargo.toml  Makefile  README.md  build.rs  furiosa_device.pyi  pyproject.toml
bindings/python/examples/: monitoring.py  monitoring_sync.py
bindings/python/src/: arch.rs  device.rs  errors.rs  hwmon.rs  lib.rs  sync.rs
bindings/python/src/config/: mod.rs
bindings/python/tests/: test_fn.py  test_fn_sync.py
device-api/: Cargo.toml  build.rs
device-api-python/: Cargo.toml  furiosa_device.pyi  pyproject.toml
device-api-python/src/: arch.rs  device.rs  errors.rs  hwmon.rs  lib.rs
device-api-python/src/config/: builder.rs  env.rs  inner.rs  mod.rs
device-api/src/: arch.rs  blocking.rs  devfs.rs  device.rs  env.rs  error.rs  hwmon.rs  lib.rs  list.rs  perf_regs.rs  proc.rs  status.rs  sysfs.rs
device-api/src/arch/: mod.rs  renegade.rs  rngd.rs  warboy.rs
device-api/src/arch_impl/: mod.rs  renegade.rs  warboy.rs
device-api/src/cbinding/: arch.rs  core_api.rs  device.rs  mod.rs
device-api/src/cbinding/examples/: READEME.md  get_device_info_by_index.c  list_device_info.c
device-api/src/cbinding/include/: device.h
device-api/src/cbinding/integration_test/: integration_test_in_rust.rs  mod.rs
device-api/src/cbinding/test/: integration_test.rs
device-api/src/config/: builder.rs  env.rs  find.rs  inner.rs  mod.rs
device-api/src/hwloc/: bindgen.rs  helper.rs  hwloc.rs  mod.rs
device-api/src/topology/: build.rs  helper.rs  hwloc.rs  hwloc_binding.rs  mod.rs  test.xml
src/: arch.rs  blocking.rs  core.rs  devfs.rs  device.rs  error.rs  find.rs  hwmon.rs  lib.rs  list.rs  perf_regs.rs  proc.rs  status.rs  sysfs.rs
src/config/: builder.rs  env.rs  find.rs  inner.rs  mod.rs  parse.rs
test_data/test-0/sys/bus/pci/devices/0000:6d:00.0/hwmon/hwmon0/: curr1_label  curr2_label  in0_label  in1_label  temp1_label  temp2_label
test_data/test-0/sys/class/npu_mgmt/: npu0_mgmt  npu0pe1  npu1_mgmt
test_data/test-0/sys/device/virtual/npu_mgmt/npu0_mgmt/: device_sn  device_uuid  ne_clk_freq_info  platform_type  soc_rev  soc_uid
test_data/test-0/sys/device/virtual/npu_mgmt/npu1_mgmt/: busname  dev  device_sn  device_uuid  fw_version  soc_uid  version
test_data/test-1/sys/bus/pci/devices/0000:00:03.0/hwmon/hwmon0/: name  power1_label  temp10_label  temp1_label  temp2_label  temp3_label  temp4_label  temp5_label  temp6_label  temp7_label  temp8_label  temp9_label
test_data/test-1/sys/bus/pci/devices/0000:6d:00.0/hwmon/hwmon0/: name  power1_label  power2_label
test_data/test-1/sys/class/npu_mgmt/: npu0_mgmt
test_data/test-1/sys/class/npu_mgmt/npu0pe0/: perf_regs
test_data/test-1/sys/class/npu_mgmt/npu0pe0-1/: perf_regs
test_data/test-1/sys/class/npu_mgmt/npu0pe1/: perf_regs
test_data/test-1/sys/class/renegade_mgmt/: renegade!npu0mgmt
test_data/test-1/sys/class/rngd_mgmt/: rngd!npu0mgmt
test_data/test-1/sys/devices/virtual/npu_mgmt/npu0_mgmt/: atr_error  busname  dev  device_sn  device_type  device_uuid  fw_version  performance_mode
test_data/test-1/sys/devices/virtual/renegade_mgmt/renegade!npu0mgmt/: atr_error  busname  device_type  device_uuid  version
test_data/test-1/sys/devices/virtual/rngd_mgmt/rngd!npu0mgmt/: board_revision  cur_pe_ids  device_type  soc_id
tests/test-0/sys/class/npu_mgmt/: npu0pe0  npu1pe0  npu1pe1
