[workspace]

members = [
    "device-api",
    "device-api-python"
]

[workspace.package]
version = "0.1.4-dev"
authors = ["FuriosaAI SW Team <pkg@furiosa.ai>"]
edition = "2021"
description = "APIs that offer FuriosaAI NPU devices' information and allow to control the devices"
license = "Apache-2.0"
homepage = "https://furiosa.ai"
repository = "https://github.com/furiosa-ai/device-api"
readme = "README.md"

[workspace.dependencies]
array_tool = "1"
cli-table = "0.4"
enum-display-derive = "0.1"
enum-utils = "0.1.2"
itertools = "0.10"
lazy_static = "1.4"
memoize = "0.3.1"
nom = "7.1"
rayon = "1.5"
regex = "1.5"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio = "1.17.0"
tracing = "0.1"
tracing-subscriber = "0.3.1"
eyre = "0.6"