[workspace]

members = [
    "device-api",
    "bindings/python"
]

[workspace.package]
version = "0.2.1-dev"
authors = ["FuriosaAI SW Team <pkg@furiosa.ai>"]
edition = "2021"
description = "APIs that offer FuriosaAI NPU devices' information and allow to control the devices"
license = "Apache-2.0"
homepage = "https://furiosa.ai"
repository = "https://github.com/furiosa-ai/device-api"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.19.0", features = ["full"] }
