[package]
name = "furiosa-device-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_device_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
tokio = { workspace = true }
furiosa-device = { path = "../device-api" }
