[package]
name = "furiosa-device"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
build = "src/topology/build.rs"
links = "hwloc"

[features]
blocking = [] # Enable blocking APIs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "list_npu"
path = "bin/list_npu.rs"

[[bin]]
name = "list_npu_blocking"
path = "bin/list_npu_blocking.rs"
required-features = ["blocking"]

[[bin]]
name = "list_hwmon"
path = "bin/list_hwmon.rs"

[[bin]]
name = "list_proc"
path = "bin/list_proc.rs"

[[bin]]
name = "list_clock_frequency"
path = "bin/list_clock_frequency.rs"

[[bin]]
name = "show_topology"
path = "bin/show_topology.rs"

[dependencies]
array_tool = "1"
cli-table = "0.4"
enum-display-derive = "0.1"
enum-utils = "0.1.2"
itertools = "0.12.1"
lazy_static = "1.4"
memoize = { version = "0.4.2", features = ["full"] }
nom = "7.1"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0.156", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
libc = "0.2.153"
sscanf = "0.4.1"
pkg-config = "0.3.8"
autotools = "0.2"
hex-literal = "0.4.1"
flate2 = "1.0"
sha3 = "0.10.8"
tar = "0.4"
attohttpc = "0.28"

[build-dependencies]
attohttpc = "0.28"
flate2 =  "1.0"
hex-literal = "0.4"
sha3 = "0.10.8"
tar = "0.4"
autotools = "0.2"
cmake = "0.1.50"
pkg-config = "0.3.8"

[dev-dependencies]
eyre = "0.6"
attohttpc = "0.28"
flate2 =  "1.0"
hex-literal = "0.4"
sha3 = "0.10.8"
tar = "0.4"
autotools = "0.2"
cmake = "0.1.50"
pkg-config = "0.3.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
