[package]
name = "furiosa-device-c"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi_helpers = "0.3.0"
furiosa-device = { path = "../../device-api", features = ["blocking"] }
libc = "0.2"
tokio.workspace = true
