[package]
name = "furiosa-device-python"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_device"
crate-type = ["cdylib"]

[dependencies]
furiosa-device = { path = "../../device-api", features = ["blocking"] }
pyo3 = "0.18.1"
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
tokio = { workspace = true }
